# new-token-intelligence

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
api/: index.py
data/: local_event_feed.json  sample_market_snapshot.json  scanner_config.toml
data/demand_evidence/: competitor_pricing.csv  survey_results.csv
report/: architecture_diagram.mmd  final_project_report.tex
scripts/: build_demo_state.py  export_announcement_evidence.py
src/new_coins_scanner/: __init__.py  binance.py  cli.py  config.py  dashboard.py  engine.py  env.py  event_engine.py  event_models.py  event_providers.py  live_web.py  models.py  runtime_state.py  scoring.py  state_views.py
