[project]
name = "small-cap-crypto-radar"
version = "0.1.0"
description = "Small-cap crypto market-intelligence dashboard prototype"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = []

[project.scripts]
small-cap-crypto-radar = "new_coins_scanner.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
